--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "classify.js",
   "dependencies": {
     "bayes": "0.0.7",
-    "csvtojson": "^2.0.8"
+    "csvtojson": "^2.0.8",
+    "json2csv": "^4.2.1"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
