--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "bayes": "0.0.7",
     "csvtojson": "^2.0.8",
-    "json2csv": "^4.2.1"
+    "json2csv": "^4.2.1",
+    "stopword": "^0.1.10"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
