Add test for classify model with search

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "inputPath": "input.csv",
-  "outputDir": "/Users/paulwalker/output2",
+  "outputDir": "./output",
   "inputTitleField": "name",
   "inputDataField": "description",
   "searchOrder": [
